# AgentForge

./: .dockerignore  .env.example  .gitignore  AgentForge 个人助理系统架构规划方案.md  Dockerfile  Dockerfile.prod  GITHUB_README.md  MEMORY.md  QUICKSTART_P2.md  README.md  check-ci-status.sh  configure-aliyun-mirror.sh  configure-docker-mirror.sh  configure-docker-proxy.sh  deploy.sh  docker-compose.base.yml  docker-compose.ha.yml  docker-compose.monitoring.yml  docker-compose.prod.yml  docker-compose.yml  logs-services.sh  nginx.conf  package.json  pyproject.toml  requirements.txt  run.py  run.sh  service-manager.sh  start-deployment.sh  start-services.sh  stop-services.sh  test_api.sh  tsconfig.json
agentforge/: __init__.py  config.py
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: commands.rs  main.rs  tray.rs  updater.rs
docker/: Dockerfile  docker-compose.yml
docs/: CURRENT_VS_PLANNED_COMPARISON.md  DEPLOYMENT.md  DEPLOYMENT_PLAN_DETAILED.md  DEPLOYMENT_STATUS_AND_NEXT_STEPS.md  DEPLOYMENT_STEPS.md  DEVELOPMENT_SUMMARY.md  DOCKER_NETWORK_FIX.md  ENTERPRISE_ENHANCEMENT_PLAN.md  FINAL_COMPLETION_SUMMARY.md  FINAL_DEPLOYMENT_GUIDE.md  IMPLEMENTATION_COMPARISON_REPORT.md  LINKEDIN_INTEGRATION_GUIDE.md  LONG_TERM_TASKS_FINAL_REPORT.md  LONG_TERM_TASKS_OPTIMIZED.md  LONG_TERM_TASKS_SUMMARY.md  MID_TERM_IMPLEMENTATION_PLAN.md  MID_TERM_PROGRESS_REPORT_1.md  NEXT_STEPS_TODO_LIST.md  OPTIMIZATION_PROGRESS.md  P2_COMPLETION_SUMMARY.md  P2_FEATURES_GUIDE.md  PHASE2_COMPLETION_REPORT.md  PHASE3_IMPLEMENTATION_GUIDE.md  PHASE3_PROGRESS_REPORT.md  USER_GUIDE.md  (+14 more)
(+382 files in other folders)
